--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
         <h1>Welcome to Niceninja99's World</h1>
         <nav>
             <ul>
-                <li><a href="#minecraft">Minecraft</a></li>
-                <li><a href="#soccer">Soccer</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="minecraft.html">Minecraft</a></li>
+                <li><a href="soccer.html">Soccer</a></li>
+                <li><a href="coding.html">Coding</a></li>
             </ul>
         </nav>
     </header>
-    <section id="minecraft">
-        <h2>Minecraft Adventures</h2>
-        <p>Niceninja99 loves to explore, build, and conquer in the world of Minecraft.</p>
-    </section>
-    <section id="soccer">
-        <h2>Soccer Passion</h2>
-        <p>When he's not gaming, you can find Niceninja99 scoring goals on the soccer field.</p>
+    <section id="home">
+        <h2>Home</h2>
+        <p>Welcome to the personal website of Niceninja99. Here, you can learn more about his favorite activities, including Minecraft, soccer, and coding.</p>
     </section>
     <footer>
         <p>&copy; 2025 Niceninja99's Personal Website</p>
     </footer>
-    <script src="scripts.js"></script>
 </body>
 </html>
