Update and rename main to soccer.html

--- a/soccer.html
+++ b/soccer.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niceninja99's Personal Website</title>
+    <title>Soccer Passion</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Niceninja99's World</h1>
+        <h1>Soccer Passion</h1>
         <nav>
             <ul>
-                <li><a href="#minecraft">Minecraft</a></li>
-                <li><a href="#soccer">Soccer</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="minecraft.html">Minecraft</a></li>
+                <li><a href="soccer.html">Soccer</a></li>
+                <li><a href="coding.html">Coding</a></li>
             </ul>
         </nav>
     </header>
-    <section id="minecraft">
-        <h2>Minecraft Adventures</h2>
-        <p>Niceninja99 loves to explore, build, and conquer in the world of Minecraft.</p>
-    </section>
     <section id="soccer">
         <h2>Soccer Passion</h2>
         <p>When he's not gaming, you can find Niceninja99 scoring goals on the soccer field.</p>
@@ -27,6 +25,5 @@
     <footer>
         <p>&copy; 2025 Niceninja99's Personal Website</p>
     </footer>
-    <script src="scripts.js"></script>
 </body>
 </html>
