--- a/minecraft.html
+++ b/minecraft.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft Adventures</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
@@ -21,9 +22,14 @@
     <section id="minecraft">
         <h2>Minecraft Adventures</h2>
         <p>Niceninja99 loves to explore, build, and conquer in the world of Minecraft.</p>
+        <div class="creeper">
+            <img src="creeper.png" alt="Creeper">
+            <button onclick="creeperExplosion()">Make Creeper Explode</button>
+        </div>
     </section>
     <footer>
         <p>&copy; 2025 Niceninja99's Personal Website</p>
     </footer>
 </body>
 </html>
+
