--- a/minecraft.html
+++ b/minecraft.html
@@ -23,8 +23,8 @@
         <h2>Minecraft Adventures</h2>
         <p>Niceninja99 loves to explore, build, and conquer in the world of Minecraft.</p>
         <div class="creeper">
-            <img src="creeper.png" alt="Creeper">
-            <button onclick="creeperExplosion()">Make Creeper Explode</button>
+            <img src="creeper.png" alt="explode.gif">
+            <button onclick="explode.gif()">Make Creeper Explode</button>
         </div>
     </section>
     <footer>
