--- a/minecraft.html
+++ b/minecraft.html
@@ -24,7 +24,7 @@
         <p>Niceninja99 loves to explore, build, and conquer in the world of Minecraft.</p>
         <div class="creeper">
             <img src="creeper.png" alt="explode.gif">
-            <button onclick="explode.gif()">Make Creeper Explode</button>
+            <button onclick="creeperExplosion()">Make Creeper Explode</button>
         </div>
     </section>
     <footer>
