--- a/minecraft.html
+++ b/minecraft.html
@@ -23,7 +23,7 @@
         <h2>Minecraft Adventures</h2>
         <p>Niceninja99 loves to explore, build, and conquer in the world of Minecraft.</p>
         <div class="creeper">
-            <img src="creeper.png" alt="explode.gif">
+            <img src="creeper.png" alt="creeper.png">
             <button onclick="creeperExplosion()">Make Creeper Explode</button>
         </div>
     </section>
