--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Niceninja99's Personal Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Add this line for the favicon -->
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Welcome to Niceninja99's World</h1>
+        <h1>Welcome to Niceninja99's World, this is filled with the best things ever!!!!!!!</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
