--- a/minecraft.html
+++ b/minecraft.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft Adventures</title>
+    <title>Minecraft Adventures Of Mr NinjaNice99</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Add this line for the favicon -->
     <script src="scripts.js" defer></script>
 </head>
 <body>
@@ -23,7 +24,7 @@
         <h2>Minecraft Adventures</h2>
         <p>Niceninja99 loves to explore, build, and conquer in the world of Minecraft.</p>
         <div class="creeper">
-            <img src="creeper.png" alt="creeper.png">
+            <img id="creeper-image" src="creeper.png" alt="Creeper">
             <button onclick="creeperExplosion()">Make Creeper Explode</button>
         </div>
     </section>
@@ -32,4 +33,3 @@
     </footer>
 </body>
 </html>
-
