--- a/soccer.html
+++ b/soccer.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soccer Passion</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Add this line for the favicon -->
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
@@ -21,6 +23,10 @@
     <section id="soccer">
         <h2>Soccer Passion</h2>
         <p>When he's not gaming, you can find Niceninja99 scoring goals on the soccer field.</p>
+        <div class="soccer">
+            <img src="soccer_ball.png" alt="Soccer Ball">
+            <button onclick="scoreGoal()">Score a Goal</button>
+        </div>
     </section>
     <footer>
         <p>&copy; 2025 Niceninja99's Personal Website</p>
